fix the media query so the author image is centered on mobile & tablet sizes

--- a/blocks/full-author-bio-block/features/full-author-bio/full-author-bio.scss
+++ b/blocks/full-author-bio-block/features/full-author-bio/full-author-bio.scss
@@ -1,5 +1,5 @@
 .image-container {
-  @media screen and (max-width: map-get($grid-breakpoints, 'md')){
+  @media screen and (max-width: map-get($grid-breakpoints, 'lg')){
     text-align: center;
     float: none;
     width: 100%;
